--- a/html/services.html
+++ b/html/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services | SMP Negeri 14 Malang</title>
+    <title>Home | SMP Negeri 14 Malang</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <link rel="shortcut icon" type="image/x-icon" href="src/logo.png">
@@ -11,12 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="container">
-                <a href="#" class="logo">SMP Negeri 14 Malang</a>
+                <a href="#home" class="logo">SMP Negeri 14 Malang</a>
                 <ul class="nav-links">
                     <li><a href="#home">Beranda</a></li>
                     <li><a href="about.html">Tentang</a></li>
@@ -81,8 +82,13 @@
                 <a target="_blank" href="https://www.instagram.com/smpn14malang"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" href="https://www.youtube.com/@smpn14malang92"><i class="fab fa-youtube"></i></a>
             </div>
-            <p>&copy; 2024 SMP Negeri 14 Malang. Dikembangkan oleh Tim Absolute Development.</p>
+            <p>&copy; 2024 SMP Negeri 14 Malang. Dikembangkan oleh Tim <a target="_blank" href="https://absolutenet.xyz">Absolute Development</a>.</p>
+            <p>SMPN 14 Malang is <a target="_blank" href="https://github.com/Xzeel/Esplas-Website">open source</a>.</p>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
