--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
     </header>
 
     <main>
-        <section class="hero-section">
+        <section data-aos="zoom-in" class="hero-section">
             <h2>Selamat datang di website resmi SMP Negeri 14 Malang</h2>
             <p>Assalaamu'alaikum Warahmatullahi Wabarakatuh.</p>
             <p></p>
@@ -36,7 +37,7 @@
             <p>Perkembangan dan perubahan dunia pendidikan di Indonesia tidak terlepas dari pengaruh perubahan global, perkembangan ilmu pengetahuan dan teknologi, serta seni dan budaya, sehingga tidak dapat dipungkiri bahwa keberadaan sebuah website sekolah sangatlah penting. Terlebih lagi, Indonesia yang telah memasuki perkembangan revolusi industri  4.0 menuntut adanya sistem komunikasi yang lifetime. Dengan media website ini juga dapat digunakan sebagai sarana dalam menyebarluaskan informasi perkembangan dan kemajuan sekolah secara luas. Website juga dapat dijadikan sarana komunikasi antara sekolah dengan para alumni. Bahkan alumni dapat memanfaatkan website sekolah untuk koordinasi dan konsolidasi, sehingga terbentuk ikatan alumni yang semakin solid. Sekolah menyadari bahwa alumni merupakan salah satu potensi yang apabila digali dan dikelola dengan baik dan benar akan mampu memberikan kontribusi yang sangat besar dan positif kepada sekolah. Oleh karena itu, saya sangat berharap, melalui website ini, himpunan alumni SMP Negeri 14 Malang semakin kuat, sehingga pada waktunya nanti dapat memberikan kontribusi yang sangat besar bagi kemajuan sekolah tercinta ini. Akhir kata kami menyampaikan terima kasih atas kerjasamanya, maju terus untuk mencapai SMP Negeri 14 Malang yang lebih berkualitas dan sukses dalam mencerdaskan kehidupan anak Bangsa Indonesia.</p>
         </section>
 
-        <section class="features">
+        <section data-aos="zoom-in" class="features">
             <div class="feature-card">
                 <i class="fas fa-graduation-cap"></i>
                 <h3>Academic Excellence</h3>
@@ -54,7 +55,7 @@
             </div>
         </section>
 
-        <section class="news-section">
+        <section data-aos="zoom-in" class="news-section">
             <h2>Latest News &amp; Events</h2>
             <div class="news-grid">
                 <div class="news-card">
@@ -94,8 +95,13 @@
                 <a target="_blank" href="https://www.instagram.com/smpn14malang"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" href="https://www.youtube.com/@smpn14malang92"><i class="fab fa-youtube"></i></a>
             </div>
-            <p>&copy; 2024 SMP Negeri 14 Malang. Dikembangkan oleh Tim <a href="https://absolutenet.xyz">Absolute Development</a>.</p>
+            <p>&copy; 2024 SMP Negeri 14 Malang. Dikembangkan oleh Tim <a target="_blank" href="https://absolutenet.xyz">Absolute Development</a>.</p>
+            <p>SMPN 14 Malang is <a target="_blank" href="https://github.com/Xzeel/Esplas-Website">open source</a>.</p>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
