--- a/html/contact.html
+++ b/html/contact.html
@@ -47,3 +47,18 @@
     </script>
 </body>
 </html>
+
+<!--
+ __  __              _ _  __    _       _          
+ \ \/ / _______  ___| | |/ /___| |_ ___| |__   ___ 
+  \  / |_  / _ \/ _ \ | ' // _ \ __/ __| '_ \ / _ \
+  /  \  / /  __/  __/ | . \  __/ || (__| | | |  __/
+ /_/\_\/___\___|\___|_|_|\_\___|\__\___|_| |_|\___|
+ * @INFO
+ * Source code by | XzeelKetche
+ * @INFO
+ * Source code ID | Esplas-Website
+ * @INFO
+ * Perhatian      | Credit & watermark jangan pernah di hapus!
+ * @INFO
+-->
